# pkgrisk

./: Cargo.toml  README.md
src/: config.rs  http_client.rs  main.rs
src/cache/: mod.rs  sqlite_cache.rs
src/cli/: check.rs  compare.rs  mod.rs  scan.rs
src/ecosystems/: crates.rs  mod.rs  npm.rs  osv.rs  pypi.rs
src/output/: json.rs  markdown.rs  mod.rs  terminal.rs
src/scoring/: bus_factor.rs  community.rs  dependency_tree.rs  license.rs  maintenance.rs  mod.rs
